# axiom

./: CMakeLists.txt  MANIFEST.in  README.md  axiomcuda_backend.py  defaults.py  example.ipynb  explode.csv  main.py  main_cuda.py  pyproject.toml  setup.py
.github/workflows/: opencode.yml
axiom/: infer.py
axiom/axiomcuda/: infer.py
axiom/models/: rmm.py
axiom/vi/models/: hybrid_mixture_model.py
axiomcuda/: __init__.py  config.py  defaults.py  device.py  infer.py  nn.py  planner.py  random.py  tensor.py  utils.py  visualize.py
axiomcuda/models/: __init__.py  base.py  imm.py  rmm.py  smm.py  tmm.py  utils_hybrid.py
axiomcuda/vi/: __init__.py  _backend.py  distribution.py
axiomcuda/vi/conjugate/: __init__.py  base.py  multinomial.py  mvn.py
axiomcuda/vi/exponential/: __init__.py  base.py  delta.py  linear.py  mixture.py  multinomial.py  mvn.py
axiomcuda/vi/models/: __init__.py  base.py  hybrid_mixture_model.py  mixture.py  slot_mixture_model.py
axiomcuda/vi/transforms/: __init__.py  base.py  linear_mng.py
axiomcuda/vi/utils/: __init__.py  input_handling.py  maps.py  math.py  pytree.py
build_no_cuda/: CMakeCache.txt  Makefile  cmake_install.cmake
build_no_cuda/src/: Makefile  axiomcuda-config.cmake  cmake_install.cmake
cmake/: axiomcuda-config.cmake.in
gameworld/envs/: __init__.py
gameworld/envs/base/: __init__.py  aviate.py  base_env.py  bounce.py  cross.py  drive.py  explode.py  fruits.py  gold.py  hunt.py  impact.py  jump.py  utils.py
gameworld/envs/perturbed/: __init__.py  aviate.py  bounce.py  cross.py  drive.py  explode.py  fruits.py  gold.py  hunt.py  impact.py  jump.py
src/: CMakeLists.txt  setup.py
src/bindings/: README.md  bindings.cpp  bindings.h  distribution_bindings.cpp  model_bindings.cpp  tensor_bindings.cpp  transform_bindings.cpp
src/core/: cuda_kernels.cu  cuda_utils.h  linalg.cpp  linalg.h  math.cpp  math.h  random.cpp  random.h  tensor.cpp  tensor.h
src/distributions/: conjugate.h  cuda_distributions.cu  cuda_distributions.cuh  delta.h  distribution.cpp  distribution.h  exponential_family.cpp  exponential_family.h  multinomial_conjugate.h  multinomial_exponential.h  mvn_conjugate.h  mvn_exponential.h
src/models/: cuda_models.cu  hybrid_mixture.cpp  hybrid_mixture.h  imm.cpp  imm.h  mixture.cpp  mixture.h  rmm.cpp  rmm.h  smm.cpp  smm.h  tmm.cpp  tmm.h  utils.cpp  utils.h
src/transforms/: cuda_transforms.cu  cuda_transforms.cuh  linear_mng.cpp  linear_mng.h  transform.cpp  transform.h  types.cpp  types.h
