# Copyright 2025 VERSES AI, Inc.
#
# Licensed under the VERSES Academic Research License (the "License");
# you may not use this file except in compliance with the license.
#
# You may obtain a copy of the License at
#
#     https://github.com/VersesTech/axiom/blob/main/LICENSE
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8",
    "cmake>=3.18",
    "ninja",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "axiomcuda"
version = "0.1.0"
authors = [
    {name = "VERSES Research", email = "verses.research@verses.ai"},
]
description = "AXIOMCUDA: High-performance C++/CUDA backend for AXIOM - Learning to Play Games with Object-Centric Models"
readme = "README.md"
license = {text = "VERSES Academic Research License"}
requires-python = ">=3.10,<3.12"
keywords = [
    "machine learning",
    "probabilistic inference",
    "variational inference",
    "mixture models",
    "object-centric learning",
    "CUDA",
    "GPU",
    "axiom",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.10.0",
    "wandb>=0.18.0",
    "mediapy>=1.2.0",
    "moviepy>=1.0.3",
    "rich>=13.0.0",
    "multimethod>=1.12",
    "gameworld>=0.1.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cuda-runtime-cu12>=12.0",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-cufft-cu12>=11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/VersesTech/axiom"
Documentation = "https://docs.verses.ai/axiom"
Repository = "https://github.com/VersesTech/axiom.git"
"Bug Tracker" = "https://github.com/VersesTech/axiom/issues"

[tool.setuptools]
packages = ["axiomcuda"]

[tool.setuptools.package-data]
axiomcuda = ["*.so", "*.pyd", "*.dll", "*.dylib"]

[tool.setuptools.exclude-package-data]
axiom = ["*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
